--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(neuwuronka)
 set(CMAKE_CXX_STANDARD 17)            # Enable c++17 standard
 
 # Add main.cpp file of project root directory as source file
-set(SOURCE_FILES main.cpp)
+set(SOURCE_FILES src/main.cpp)
 
 # Add executable target with source files listed in SOURCE_FILES variable
 add_executable(neuwuronka ${SOURCE_FILES})
