XOR working after 1000 iterations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,15 @@ set(CMAKE_CXX_STANDARD 17)            # Enable c++17 standard
 # Add main.cpp file of project root directory as source file
 set(SOURCE_FILES src/main.cpp)
 
+if (NOT CMAKE_BUILD_TYPE)
+    set(CMAKE_BUILD_TYPE Release)
+endif()
+
+# Add flags
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_FLAGS_RELEASE "-w -Ofast -O3")
+set(CMAKE_CXX_FLAGS_DEBUG "-g")
+
+
 # Add executable target with source files listed in SOURCE_FILES variable
 add_executable(neuwuronka ${SOURCE_FILES})
