--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,37 @@ Cargo.lock
 
 .DS_Store
 cmake-build-debug/
+src/network.hpp
+build/cmake_install.cmake
+build/CMakeCache.txt
+build/neuwuronka
+build/CMakeFiles/cmake.check_cache
+build/CMakeFiles/CMakeDirectoryInformation.cmake
+build/CMakeFiles/CMakeError.log
+build/CMakeFiles/CMakeOutput.log
+build/CMakeFiles/Makefile.cmake
+build/CMakeFiles/Makefile2
+build/CMakeFiles/progress.marks
+build/CMakeFiles/TargetDirectories.txt
+build/CMakeFiles/3.24.1/CMakeCCompiler.cmake
+build/CMakeFiles/3.24.1/CMakeCXXCompiler.cmake
+build/CMakeFiles/3.24.1/CMakeDetermineCompilerABI_C.bin
+build/CMakeFiles/3.24.1/CMakeDetermineCompilerABI_CXX.bin
+build/CMakeFiles/3.24.1/CMakeSystem.cmake
+build/CMakeFiles/3.24.1/CompilerIdC/CMakeCCompilerId.c
+build/CMakeFiles/3.24.1/CompilerIdC/CMakeCCompilerId.o
+build/CMakeFiles/3.24.1/CompilerIdCXX/CMakeCXXCompilerId.cpp
+build/CMakeFiles/3.24.1/CompilerIdCXX/CMakeCXXCompilerId.o
+build/CMakeFiles/neuwuronka.dir/build.make
+build/CMakeFiles/neuwuronka.dir/cmake_clean.cmake
+build/CMakeFiles/neuwuronka.dir/compiler_depend.internal
+build/CMakeFiles/neuwuronka.dir/compiler_depend.make
+build/CMakeFiles/neuwuronka.dir/compiler_depend.ts
+build/CMakeFiles/neuwuronka.dir/depend.make
+build/CMakeFiles/neuwuronka.dir/DependInfo.cmake
+build/CMakeFiles/neuwuronka.dir/flags.make
+build/CMakeFiles/neuwuronka.dir/link.txt
+build/CMakeFiles/neuwuronka.dir/progress.make
+build/CMakeFiles/neuwuronka.dir/src/main.cpp.o
+build/CMakeFiles/neuwuronka.dir/src/main.cpp.o.d
+build/Makefile
