Stop tracking evaluator

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,4 @@ data/fashion_mnist_train_vectors.csv
 data/fashion_mnist_test_labels.csv
 data/fashion_mnist_test_vectors.csv
 data/fashion_mnist_train_labels.csv
+evaluator/*
