--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,47 @@ data/fashion_mnist_test_labels.csv
 data/fashion_mnist_test_vectors.csv
 data/fashion_mnist_train_labels.csv
 evaluator/*
+
+build/CMakeFiles/3.25.1/CMakeCCompiler.cmake
+
+build/CMakeFiles/3.25.1/CMakeCXXCompiler.cmake
+
+build/CMakeFiles/3.25.1/CMakeDetermineCompilerABI_C.bin
+
+build/CMakeFiles/3.25.1/CMakeDetermineCompilerABI_CXX.bin
+
+build/CMakeFiles/3.25.1/CMakeSystem.cmake
+
+build/CMakeFiles/3.25.1/CompilerIdC/CMakeCCompilerId.c
+
+build/CMakeFiles/3.25.1/CompilerIdC/CMakeCCompilerId.o
+
+build/CMakeFiles/3.25.1/CompilerIdCXX/CMakeCXXCompilerId.cpp
+
+build/CMakeFiles/3.25.1/CompilerIdCXX/CMakeCXXCompilerId.o
+
+build/CMakeFiles/nn.dir/build.make
+
+build/CMakeFiles/nn.dir/cmake_clean.cmake
+
+build/CMakeFiles/nn.dir/compiler_depend.internal
+
+build/CMakeFiles/nn.dir/compiler_depend.make
+
+build/CMakeFiles/nn.dir/compiler_depend.ts
+
+build/CMakeFiles/nn.dir/depend.make
+
+build/CMakeFiles/nn.dir/DependInfo.cmake
+
+build/CMakeFiles/nn.dir/flags.make
+
+build/CMakeFiles/nn.dir/link.txt
+
+build/CMakeFiles/nn.dir/neuwuronka/main.cpp.o
+
+build/CMakeFiles/nn.dir/neuwuronka/main.cpp.o.d
+
+build/CMakeFiles/nn.dir/progress.make
+
+build/nn
